# scaligator

./: .gitignore  Cargo.toml  Dockerfile  README.md  prometheus-rbac.yaml  prometheus.yml  scaligator-alertmanager.yaml  scaligator-clusterrole.yaml  scaligator-clusterrolebinding.yaml  scaligator-deployment.yaml  scaligator-rules.yaml  scaligator-service.yaml  scaligator-serviceaccount.yaml
.github/workflows/: publish.yml  validation.yaml
src/: alerts.rs  cli.rs  config.rs  controller.rs  main.rs  metrics.rs  observability.rs  scaler.rs
